--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "langchain-community>=0.3.17",
+    "langchain-text-splitters>=0.3.6",
+    "langgraph>=0.2.72",
+    "langsmith>=0.3.8",
+]
