--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "langchain-text-splitters>=0.3.6",
     "langgraph>=0.2.72",
     "langsmith>=0.3.8",
+    "python-dotenv>=1.0.1",
 ]
