--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "langchain-community>=0.3.17",
+    "langchain-google-genai>=2.0.9",
     "langchain-text-splitters>=0.3.6",
     "langgraph>=0.2.72",
     "langsmith>=0.3.8",
-    "python-dotenv>=1.0.1",
+    "pydantic-settings>=2.7.1",
+    "pydantic>=2.10.6",
 ]
